created style.css script.js and updated index.html files

--- a/index.html
+++ b/index.html
@@ -4,13 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-    <title>Responsive-web-design</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    />
+
+    <title>Foods</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
-    <script src="scripts.js"></script>
+    <!-- <header>Variety Foods Design</header> -->
+    <main>
+      <div class="container">
+        <!-- Section 1 -->
+        <section class="section-1">
+          <h1 class="section-heading">variety of foods</h1>
+          <div class="section-1-icons">
+            <i class="change fas fa-egg"></i>
+            <i class="fas fa-stroopwafel"></i>
+            <i class="fas fa-cheese"></i>
+            <i class="fas fa-hotdog"></i>
+            <i class="fas fa-drumstick-bite"></i>
+            <i class="fas fa-apple-alt"></i>
+            <i class="fas fa-ice-cream"></i>
+            <i class="fas fa-fish"></i>
+            <i class="fas fa-cookie"></i>
+            <i class="fas fa-seedling"></i>
+          </div>
+        </section>
+      </div>
+      <!-- End of Section 1 -->
+    </main>
+    <!-- <footer><p>copyright@2023</p></footer> -->
+    <script src="script.js"></script>
   </body>
 </html>
